<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.loginRegister.LoginActivity">
    
    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Join Us"
        android:textSize="64dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1">
    </TextView>
    
   <EditText
       android:id="@+id/login_email"
       android:layout_width="380dp"
       android:layout_height="wrap_content"
       android:textSize="20dp"
       android:hint="Email Address"
       android:inputType="textEmailAddress"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/login_title"
       android:layout_marginTop="60dp"
       android:drawableLeft="@drawable/ic_baseline_email_24"
       android:drawablePadding="5dp">
   </EditText>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp">
    </EditText>

    <Button
        android:id="@+id/login_button"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        android:layout_marginTop="10dp">
    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have account?"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        android:layout_marginTop="10dp">
    </TextView>

    <TextView
        android:id="@+id/login_register_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register Now"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        android:layout_marginTop="10dp">
    </TextView>

    <ProgressBar
        android:id="@+id/login_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        android:layout_marginTop="10dp"
        android:visibility="invisible">
    </ProgressBar>

</androidx.constraintlayout.widget.ConstraintLayout>